clusters/k4/kubernetes/apps/system-upgrade/tuppr/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: tuppr
spec:
  endpointSelector:
    matchLabels:
      {}
  egress:
    - toEntities:
        - kube-apiserver
    - toCIDR:
      - ${SECRET_TALOS_VIP_IPV4}/32
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: default
            component: apid
            provider: talos.dev
    - toFQDNs:
        - matchName: factory.talos.dev
      toPorts:
        - ports:
            - port: "443"
              protocol: ANY
